<resources>
    <string name="app_name">Aplication</string>
    <string name="appbar">AppBarLab</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">search</string>
    <string name="action_new">new</string>
    <string name="action_refresh">refresh</string>
    <string name="title_activity_activity_new">ActivityNew</string>
    <string name="action_share">share</string>
    <string name="nombre">Nombre</string>
    <string name="defaultimagen">defaultimagen</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="apellidos">Apellidos</string>
    <string name="apellidos_usuario">Apellidos Usuario</string>
    <string name="edad">Edad</string>
    <string name="name">Name</string>
    <string name="peso">Peso</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="page1">Calendario</string>
    <string name="page2">Perfil</string>
    <string name="page3">Alimentos</string>
    <string name="elige_el_d_a">Elige el día</string>
    <string name="aceptar">Aceptar</string>
    <string name="checkboxalimento">CheckBox</string>
    <string name="introduzca_cantidad">Introduzca cantidad</string>
    <string name="cantidad">Cantidad</string>
    <string name="recordatorio">Incluye Recordatorio</string>
    <string name="recordatoriotext">Recordatorio: </string>
</resources>
