<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="108dp"
        android:layout_height="58dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="163dp"
        android:contentDescription="@string/defaultimagen"
        app:srcCompat="@drawable/perfil" />

    <TextView
        android:id="@+id/nombreUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="230dp"
        android:text="@string/nombre" />

    <EditText
        android:id="@+id/nUser"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/nombreUser"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/nombre_usuario"
        android:inputType="text|textPersonName" />

    <TextView
        android:id="@+id/apellidosUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/nombreUser"
        android:layout_below="@+id/nUser"
        android:text="@string/apellidos" />

    <EditText
        android:id="@+id/apeUser"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edadUser"
        android:layout_below="@+id/apellidosUser"
        android:ems="10"
        android:hint="@string/apellidos_usuario"
        android:inputType="text|textPersonName" />

    <TextView
        android:id="@+id/edadUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="187dp"
        android:layout_marginStart="18dp"
        android:text="@string/edad" />

    <EditText
        android:id="@+id/eUser"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/apeUser"
        android:layout_below="@+id/edadUser"
        android:layout_marginTop="-187dp"
        android:ems="10"
        android:hint="@string/edad"
        android:inputType="text|textPersonName" />

    <TextView
        android:id="@+id/pesoUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/apeUser"
        android:layout_below="@+id/eUser"
        android:text="@string/peso" />

    <EditText
        android:id="@+id/pUser"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/apeUser"
        android:layout_below="@+id/pesoUser"
        android:ems="10"
        android:hint="@string/peso"
        android:inputType="text|textPersonName" />

    <Button
        android:id="@+id/guardarCambios"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="121dp"
        android:background="#4964f8"
        android:text="@string/guardar_cambios"
        android:textColor="@android:color/background_light"
        tools:textColor="@android:color/background_light" />


</RelativeLayout>